--- a/new 1.css
+++ b/new 1.css
@@ -13,19 +13,12 @@
 	text-align:center;
 	}
 	article{
-	
-	}
-	nav{
-		background-color:#929596;
-		padding:10px;
-	}
-	a:visited{
-		color:green;
-	}
-	a:link{
-		color:green;
-		text-decoration:none;
-	}
-	a:hover{
-		color:purple;
+	margin-left:10em;
+	margin-right:10em;
+	background-color:#929596;
+	padding:1px;
+	border: 1px solid black;
+	max-height:25em;
+	min-height:20em;
+	overflow:scroll;
 	}
