--- a/new 1.css
+++ b/new 1.css
@@ -19,8 +19,8 @@
 	
 	}
 	article{
-	margin-left:10em;
-	margin-right:10em;
+	margin-left:200px;
+	margin-right:200px;
 	background-color:#929596;
 	padding:1px;
 	border: 1px solid black;
